# Synthetizers-parameters-estimation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  DOCKER.md  Dockerfile  EVAL_QUICKREF.md  PRESET_GENERATION.md  QUICKSTART.md  README.md  SETUP.md  USAGE.md  compare_params.py  create_splits_cloud.sh  dataset_cloud.sh  docker-compose.yml  launch.sh  launch.sh.broken  list_vital_params.py  pyproject.toml  renderscript.sh  requirements.txt  run.md  stats_cloud.sh  surge_params.csv  temp.py  verify_audio.py  vital_params.txt
.github/workflows/: build.yml  code-quality-main.yaml  code-quality-pr.yaml  code-quality.yml  docker.yml  pytest.yml  test.yml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  default_surge.yaml  log_per_param_mse.yaml  plot_pos_enc.yaml  plot_proj.yaml  plot_projii.yaml  prediction_writer.yaml
configs/data/: fm.yaml  fsd.yaml  kosc.yaml  ksin.yaml  nsynth.yaml  surge.yaml  surge_mini.yaml  surge_simple.yaml
configs/experiment/: example.yaml  time_weighting.yaml
configs/extras/: default.yaml
configs/hparams_search/: ksin_optuna.yaml
configs/logger/: wandb.yaml
configs/model/: ff_cnn_small.yaml  ffn.yaml  flow.yaml  flow_fixed.yaml  flow_lpii.yaml  flow_xattn.yaml  flowmlp.yaml  ksin_flow_xform.yaml  ksin_flow_xform_geosink.yaml  ksin_flow_xform_nope.yaml  ksin_flow_xform_sinsink.yaml  ksin_flow_xform_sym.yaml  lpii_med.yaml  lpii_small.yaml  surge_ffn.yaml  surge_flow.yaml  surge_flow_adamw.yaml  surge_flow_attnproj.yaml  surge_flow_full.yaml  surge_flow_full_adamw.yaml  surge_flow_m2l.yaml  surge_flowmlp.yaml  surge_flowmlp_full.yaml  surge_flowvae.yaml
configs/paths/: docker.yaml
configs/trainer/: default.yaml
docker/: README.md  build.bat  build.sh  run_eval.sh  run_local.bat  run_local.sh  run_training.sh  shell.bat  shell.sh
docs/: API.md  CONFIGURATION.md  OVH_PERMISSION_FIX.md  README.md  SETUP.md  USAGE_GUIDE.md  remote_docker.md
generated_samples_30/: 2023 Pluck Adoration.vital  2023 Pluck Albion.vital  2K Sub Vital Pack - PL Star Maze.vital  Ambient Toychest.vital  Another Analog.vital  BA - Block Drive.vital  BA - Electro 6.vital  BA - Monster Growl 2.vital  BASS Gentle Pluck.vital  BASS Ghostpulse.vital  BASS Madhouse.vital  BASS Modify.vital  BASS Neon Reese.vital  BELL Smoothsayer.vital  CH - Future Bass Super Saw 3.vital  KEY Vast.vital  Keys - Stars.vital  LD - Whistle.vital  PADS - Glide Pad R&B.vital  PD - Alive.vital  Pad - Dwarf Mountain.vital  Pad - Errors.vital  Plants Thirsty.vital  Plip Luke 11.vital  Pluck - Cell Phone.vital  SNFKFutureBounce - Loaded Chords.vital  Super Rough Square.vital  UFO Landing.vital
jobs/eval/: eval-audio.sh  eval-jobs.txt
jobs/predict/: ffn-fsd50k.sh  ffn-full.sh  ffn-nsynth.sh  ffn-simple.sh  flow-fsd50k.sh  flow-full-1.0.sh  flow-full-4.0.sh  flow-full.sh  flow-nsynth.sh  flow-simple.sh  flowmlp-fsd50k.sh  flowmlp-full.sh  flowmlp-nsynth.sh  flowmlp-simple.sh  vae-fsd50k.sh  vae-full.sh  vae-nsynth.sh  vae-simple.sh
jobs/render/: render-audio.sh  render-jobs.txt
notebooks/: inpsect-models.ipynb
presets/: surge-base.vstpreset  vital-base.vstpreset
reference/: datalab-output-hayes.pdf.md  hayes.md
scripts/: add_music2latent.py  check_vital_coverage.py  compute_audio_metrics.py  compute_audio_metrics_no_pesto.py  create_subset_dataset.py  evaluate_locally.sh  evaluate_with_metrics.sh  generate_full_dataset.sh  generate_surge_xt_data.py  get_dataset_stats.py  launch_flow_multi.sh  list-jobs.sh  logs.sh  make_sig_perf.py  model_from_wandb_repl.py  paramspec_to_table.py  plot_param2tok.py  predict_vst_audio.py  reshard_data.py  rewrite_dataset_to_latest.py  run_smoke.py  setup.sh  setup_remote.sh  status.sh  subdir_funtime.py
scripts/audio_dirs/: fsd.txt  (+3 more)
src/: eval.py  metrics.py  pedalboard_surge.ipynb  train.py
sweeps/: fm.yaml  kosc.yaml  ksin.yaml
terraform/: .gitignore  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_configs.py  test_datamodules.py  test_eval.py  test_train.py  test_vital_details.py
(+216 files in other folders)
