[project]
name = "synth-permutations"
version = "0.1.0"
description = "Studying the effect of permutation symmetry on audio synthesiser parameter inference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "h5py>=3.14.0",
    "hdf5plugin>=5.1.0",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "mido>=1.3.3",
    "numpy>=2.2.6",
    "pedalboard>=0.9.18",
    "pyloudnorm>=0.1.1",
    "pyyaml>=6.0.3",
    "rootutils>=1.0.7",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
