[project]
name = "synth-permutations"
version = "0.1.0"
description = "Studying the effect of permutation symmetry on audio synthesiser parameter inference."
readme = "README.md"
requires-python = ">=3.10"

# Dépendances principales
dependencies = [
    # ML (PyTorch installé séparément dans Docker)
    "lightning>=2.5.5",
    "torchmetrics>=0.11.4",
    "torchvision>=0.15.0",
    # Configuration
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    # Audio processing
    "librosa>=0.11.0",
    "pedalboard>=0.9.18",
    "pyloudnorm>=0.1.1",
    "mido>=1.3.3",
    # Data handling
    "h5py>=3.14.0",
    "hdf5plugin>=5.1.0",
    "numpy>=2.2.6",
    "scipy>=1.14.1",
    # Utilities
    "click>=8.3.0",
    "colorlog>=6.9.0",
    "loguru>=0.7.3",
    "rich>=14.2.0",
    "rootutils>=1.0.7",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.3",
    # Math/ML utilities
    "POT",
    "einops",
    "threadpoolctl",
    "matplotlib",
    # Logging
    "wandb",
    "tensorboard",
    # Development
    "pytest>=6.0",
    "pytest-cov>=4.0",
    "pre-commit",
    "dask[distributed]>=2025.10.0",
    "s3fs>=0.4.2",
    "boto3>=1.40.53",
    "aws>=0.2.5",
    "pandas>=2.3.3",
    "kymatio>=0.3.0",
]

# Dépendances optionnelles
[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pre-commit",
]

# Configuration des outils
[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = "True"
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = ["tests/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
